# easybox

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPER_INSTRUCTIONS.md  README.en.md  README.md  build.rs  requirements.sh
ci/: 00-pre.sh  01-pre-commit.sh  02-musl-build.sh  codespell_ignore_words
docs/: .gitignore  book.toml  compiles_table.py
docs/src/: contributing.md  installation.md  multicall.md  test_coverage.js
src/oe/arp/: Cargo.toml  arp.md
src/oe/arp/src/: arp.rs  arp_common.rs  arp_unsafe.rs  main.rs
src/oe/attr/: Cargo.toml  attr.md
src/oe/attr/src/: attr.rs  attr_common.rs  lib_attr.rs  main.rs
src/oe/base32/: Cargo.toml
src/oe/base32/src/: base32.rs  base_common.rs  main.rs
src/oe/chage/: Cargo.toml  chage.md
src/oe/chage/src/: chage.rs  chage_common.rs  main.rs
src/oe/column/: Cargo.toml  column.md
src/oe/column/src/: column.rs  column_common.rs  lib_column.rs  main.rs
src/oe/file/: Cargo.toml  file.md
src/oe/file/src/: file.rs  file_common.rs  file_magic.rs  file_unsafe.rs  file_utils.rs  main.rs
src/oe/find/: Cargo.toml  find.md
src/oe/find/src/: find.rs  find_common.rs  main.rs
src/oe/find/src/find_common/: actions.rs  metadata.rs  operators.rs  options.rs  parse.rs  tests.rs  unsafes.rs
src/oe/flock/: Cargo.toml  flock.md
src/oe/flock/src/: flock.rs  flock_common.rs  main.rs
src/oe/free/: Cargo.toml  free.md
src/oe/free/src/: free.rs  free_common.rs  main.rs
src/oe/grep/: Cargo.toml  grep.md
src/oe/grep/src/: grep.rs  grep_common.rs  main.rs
src/oe/groupadd/: Cargo.toml  groupadd.md
src/oe/groupadd/src/: groupadd.rs  groupadd_common.rs  main.rs
src/oe/groupadd/src/utils/: getdef.rs  prefix_flag.rs  root_flag.rs
src/oe/hwclock/: Cargo.toml  hwclock.md
src/oe/hwclock/src/: directisa.rs  hwclock.rs  main.rs  rtc_device.rs
src/oe/iostat/: Cargo.toml  iostat.md
src/oe/iostat/src/: iostat.rs  iostat_common.rs  iostat_utils.rs  main.rs
src/oe/killall/: Cargo.toml  killall.md
src/oe/killall/src/: killall.rs  killall_common.rs  main.rs
src/oe/less/: Cargo.toml  less.md
src/oe/less/src/: less.rs  less_common.rs  main.rs
src/oe/login/: Cargo.toml  login.md
src/oe/login/src/: lastlog.rs  login.rs  login_common.rs  login_unsafe.rs  logindefs.rs  main.rs  utils.rs
src/oe/lspci/: Cargo.toml  lspci.md
src/oe/lspci/src/: lspci.rs  lspci_common.rs  main.rs
src/oe/lspci/src/lspci_common/: lspci_header.rs
src/oe/md5sum/: Cargo.toml  md5sum.md
src/oe/md5sum/src/: main.rs  md5sum.rs  md5sum_common.rs
src/oe/mount/: Cargo.toml  mount.md
src/oe/mount/src/: main.rs  mount.rs  mount_common.rs
src/oe/pgrep/: Cargo.toml  pgrep.md
src/oe/pgrep/src/: main.rs  pgrep.rs  pgrep_common.rs  process.rs  signals.rs
src/oe/pidof/: Cargo.toml  pidof.md
src/oe/pidof/src/: main.rs  pidof.rs  pidof_common.rs
src/oe/pstree/: Cargo.toml  pstree.md
src/oe/pstree/src/: main.rs  pstree.rs  pstree_common.rs
src/oe/setsid/: Cargo.toml  setsid.md
src/oe/setsid/src/: main.rs  setsid.rs  setsid_common.rs
src/oe/sha256sum/: Cargo.toml  sha256sum.md
src/oe/sha256sum/src/: main.rs  sha256sum.rs  sha256sum_algorithm.rs  sha256sum_common.rs
src/oe/sysctl/: Cargo.toml  sysctl.md
src/oe/sysctl/src/: main.rs  sysctl.rs  sysctl_common.rs
src/oe/taskset/: Cargo.toml  taskset.md
src/oe/taskset/src/: lib_cpuset.rs  main.rs  taskset.rs  taskset_common.rs
src/oe/umount/: Cargo.toml  umount.md
src/oe/umount/src/: main.rs  umount.rs  umount_common.rs
src/oe/useradd/: Cargo.toml  useradd.md
src/oe/useradd/src/: main.rs  useradd.rs  useradd_common.rs
src/oe/useradd/src/utils/: chkname.rs  constants.rs  copydir.rs  defaults.rs  find_new_gid.rs  find_new_sub_gids.rs  find_new_sub_uids.rs  find_new_uid.rs  getdef.rs  gshadow.rs  passwd.rs  prefix_flag.rs  root_flag.rs  shadow.rs  strtoday.rs  subordinateio.rs
src/oe/usermod/: Cargo.toml  usermod.md
src/oe/usermod/src/: main.rs  usermod.rs  usermod_common.rs
src/oe/usermod/src/utils/: chkname.rs  chowndir.rs  exitcodes.rs  get_uid.rs  getdef.rs  gettime.rs  gshadow.rs  list.rs  prefix_flag.rs  shadow.rs  strtoday.rs  subordinateio.rs  user_busy.rs
src/oe/usleep/: Cargo.toml  usleep.md
src/oe/usleep/src/: main.rs  usleep.rs  usleep_common.rs
src/oe/which/: Cargo.toml  which.md
src/oe/which/src/: main.rs  which.rs  which_common.rs
src/oe/xargs/: Cargo.toml  LICENSE  xargs.md
src/oe/xargs/src/: main.rs  xargs.rs  xargs_common.rs
src/uucore/: Cargo.toml
src/uucore_procs/: Cargo.toml
src/uucore_procs/src/: lib.rs
tests/: tests.rs
tests/by-util/: test_arp.rs  test_attr.rs  test_chage.rs  test_column.rs  test_file.rs  test_find.rs  test_flock.rs  test_free.rs  test_grep.rs  test_groupadd.rs  test_hwclock.rs  test_iostat.rs  test_killall.rs  test_less.rs  test_login.rs  test_lspci.rs  test_md5sum.rs  test_mount.rs  test_pgrep.rs  test_pidof.rs  test_pstree.rs  test_setsid.rs  test_sha256sum.rs  test_sysctl.rs  test_taskset.rs  test_umount.rs  test_useradd.rs  test_usermod.rs  test_usleep.rs  test_which.rs  test_xargs.rs
tests/common/: macros.rs  util.rs
tests/fixtures/arp/: ethers_file
tests/fixtures/column/: table  table-sep  table-sep-space
tests/fixtures/file/: cmd.file  files.txt  json.file  pgp.sl  rpm.magic
tests/fixtures/find/: init.sh
tests/fixtures/hwclock/: adjtime_drift  adjtime_local  adjtime_to_update  invalid_adjtime  invalid_rtc
tests/fixtures/less/: force-open.txt  input.txt  invalid-perms.txt  pattern.txt  show_percentage.txt  squeeze.txt  test_ci_env.txt  test_file.txt
tests/fixtures/login/: test1.exp  test2.exp  test3.exp  test4.exp  test5.exp  test6.exp  test7.exp
tests/fixtures/md5sum/: check.txt  check_fail.txt  check_improper.txt  check_missing.txt
tests/fixtures/sha256sum/: check3.txt  check3_fail.txt  check3_improper.txt  check3_missing.txt  input1.txt
tests/fixtures/which/: test_read_alias.in  test_read_functions.in
tests/fixtures/xargs/: 32767-ys.xi  EOF.xi  EOFb.xi  EOFe.xi  ask_user.sh  eof_.xi  foobar.xi  items.xi  ldatab.xi  quotes.xi  unmatched.xi  unmatched2.xi
(+61 files in other folders)
