[package]
name = "oe_attr"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "attr ~ extended attributes on XFS filesystem objects"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/attr"
keywords = ["xfsattr", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/attr.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore"}
nix = { version = "0.27.1", features = ["sched"] }
libc = "0.2.152"
extattr = "1.0.0"
errno = "0.2.8"

[[bin]]
name = "attr"
path = "src/main.rs"
