[package]
name = "oe_base32"
version = "0.0.16"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "base32 ~ decode/encode input (base32-encoding)"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://github.com/uutils/coreutils/tree/main/src/oe/base32"
keywords = ["coreutils", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/base32.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding"] }

[[bin]]
name = "base32"
path = "src/main.rs"
