[package]
name = "oe_find"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "find ~ Search for files in a directory hierarchy"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/find"
keywords = ["findutils", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/find.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", features = ["process"], package="uucore", path="../../uucore"}
nix = { version = "0.27.1", features = ["fs", "user"] }
libc = "0.2.152"
once_cell = "1.19.0"
regex = "1.10.5"
glob = "0.3.1"
users = "0.11.0"
chrono = "0.4.35"
dateparser = "0.2.1"
walkdir = "2.5.0"

[[bin]]
name = "find"
path = "src/main.rs"

[features]
default = []
