[package]
name = "oe_flock"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding"] }
nix= {version = "0.27.1",features = ["fs","process","signal","time"]}
libc={version = "0.2.149"}

[lib]
path = "src/flock.rs"

[[bin]]
name = "flock"
path = "src/main.rs"
