[package]
name = "oe_iostat"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding"] }
nix= {version = "0.27.1",features = ["fs","process","signal","time"]}
regex = "1.6.0"
chrono = "0.4.35"
uname-rs = "0.1.1"
ctrlc = "2.0"

[lib]
path = "src/iostat.rs"

[[bin]]
name = "iostat"
path = "src/main.rs"
