[package]
name = "oe_less"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "Display the contents of a text file"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/less"
keywords = ["easybox", "net-tools", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/less.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding"] }
crossterm = { version = "0.27.0"}
unicode-width = {version = "0.1.13"}
unicode-segmentation = {version = "1.12.0"}
regex = "1.11.1"

[[bin]]
name = "less"
path = "src/main.rs"
