[package]
name = "oe_login"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "login ~ Begin session on the system."

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/login"
keywords = ["login-utils", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/login.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore"}
nix = { version = "0.27.1", features = ["user", "signal", "term", "hostname", "fs", "ioctl", "uio", "zerocopy", "dir"] }
libc = "0.2.158"
dns-lookup = "2.0.4"
pam = "0.8.0"
utmpx = "0.2.0"
chrono = { version = "0.4.38", features = [] }

[[bin]]
name = "login"
path = "src/main.rs"
