[package]
name = "oe_md5sum"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "md5sum ~ compute and check MD5 message digest (md5sum-encoding)"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://github.com/uutils/coreutils/tree/main/src/oe/md5sum"
keywords = ["coreutils", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/md5sum.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding"] }
md-5 = "0.10.6"
regex = "1.6.0"
# crypto = "0.3.1"
[[bin]]
name = "md5sum"
path = "src/main.rs"
