[package]
name = "oe_pidof"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "pidof"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/pidof"
keywords = ["coreutils", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/pidof.rs"

[dependencies]
clap = { version = "3.2", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding","libc"] }
libc={version = "0.2.149"}


[[bin]]
name = "pidof"
path = "src/main.rs"
