[package]
name = "oe_pstree"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "pstree"

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/pstree"
keywords = ["coreutils", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/pstree.rs"

[dependencies]
clap = { version = "3.2", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore", features = ["encoding","libc"] }
nix={version = "0.27.1",features = ["ioctl","fs","process"]}
libc={version = "0.2.149"}
users={version="0.11.0"}


[[bin]]
name = "pstree"
path = "src/main.rs"
