[package]
name = "oe_usermod"
version = "0.0.1"
authors = ["openeuler developers"]
license = "MulanPSL-2.0"
description = "Modify the user information."

homepage = "https://gitee.com/openeuler/easybox"
repository = "https://gitee.com/openeuler/easybox/tree/master/src/oe/usermod"
keywords = ["xfsattr", "easybox", "util-linux", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[lib]
path = "src/usermod.rs"

[dependencies]
clap = { version = "3.2.0", features = ["wrap_help", "cargo"] }
uucore = { version=">=0.0.16", package="uucore", path="../../uucore"}
nix = { version = "0.27.1", features = ["user", "fs", "process", "dir"] }
lazy_static = "1.4"
chrono = "0.4"
libc = "0.2.152"


[[bin]]
name = "usermod"
path = "src/main.rs"
